--- a/index.ipynb
+++ b/index.ipynb
@@ -485,7 +485,7 @@
    "outputs": [],
    "source": [
     "def sufficiently_reviewed_restaurants(restaurants):\n",
-    "    return list(filter(lambda restaurant: restaurant['review'] > 100, restaura))"
+    "    return list(filter(lambda restaurant: restaurant['review'] > 100, restaurants))"
    ]
   },
   {
